--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2024"
 
 [dependencies]
 chrono = "0.4.43"
+
+[profile.release]
+strip = true  # Automatically strip symbols from the binary.
+lto = true # see https://llvm.org/docs/LinkTimeOptimization.html
